--- a/linux/lw-comm-server.service
+++ b/linux/lw-comm-server.service
@@ -2,17 +2,16 @@
 Description=LaserWeb4 server
 
 [Service]
-ExecStart=/usr/bin/node /home/pi/lw.comm-server/server.js
+ExecStart=/usr/bin/node /usr/lib/lw-comm-server/server.js
 Restart=always
 RestartSec=10                       # Restart service after 10 seconds if node service crashes
 StandardOutput=syslog               # Output to syslog
 StandardError=syslog                # Output to syslog
 SyslogIdentifier=lw.comm-server
-WorkingDirectory=/home/pi/lw.comm-server
-User=pi
-#Group=<alternate group>
+WorkingDirectory=/usr/lib/lw-comm-server
+User=laser-web4
+Group=laser-web4
 Environment=NODE_ENV=production PORT=8000
 
 [Install]
 WantedBy=multi-user.target
-
